<resources>
    <string name="app_name">SampleProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No Internet</string>
    <string name="button">Button</string>
    <string name="european_champioship">European Champioship</string>
    <string name="sheduled">SHEDULED</string>
    <string name="_19_00">19:00</string>
    <string name="md_35">MD:35</string>
    <string name="chelsea">Chelsea</string>
    <string name="arsenal">Arsenal</string>
    <string name="_1">1</string>
    <string name="okocha_rochas">Okocha Rochas</string>
    <string name="attacking_midfield">Attacking Midfield</string>
</resources>
